<resources>
    <string name="app_name">Notefy</string>
    <string name="version">Version 1.3.0</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_checkbox_persistent">Persistent</string>
    <string name="developer_name">Narayana Suri</string>
    <string name="made_by_title">MADE WITH LOVE BY</string>
    <string name="about_us">Thanks for downloading Notefy! Built with love, Notefy was built to simplify the process of noting things down and setting reminders in the form of notifications.</string>
    <string name="about_developer">My name\'s Narayana Suri and I design and develop Android apps to simplify things. While I am not coding, I like to watch football, listen to music and play some guitar. :)</string>

    <string name="reminder_title">New Reminder</string>
    <string name="reminder_hint">Buy eggs</string>
    <string name="reminder_text_count">0/24</string>

    <string name="persistent">Persistent</string>
    <string name="create">CREATE</string>
    <string name="discard">DISCARD</string>

    <string name="note_more">View More</string>
    <string name="note_palette">Note Palette</string>
    <string name="note_delete">Delete Note</string>

    <string name="note_sample_title">Note Title</string>
    <string name="sample_text">Bacon ipsum dolor amet tail jerky landjaeger pork meatball rump shank. Frankfurter beef sausage spare ribs tri-tip brisket cupim fatback corned beef biltong. Jowl t-bone boudin, brisket biltong flank beef ribs ham tail pork strip steak. Swine pork chop pork loin ball tip burgdoggen rump venison beef, alcatra biltong capicola turkey cow jerky turducken. Burgdoggen meatball alcatra swine ball tip jerky tail, venison ribeye doner prosciutto.</string>

    <string name="no_reminders">No reminders</string>
    <string name="no_notes">No notes</string>

    <string name="about_title">ABOUT</string>

    <string name="about_app_title">About the app</string>

    <string name="share_app_title">Spread the love</string>
    <string name="share_app_desc">Help me and share the app</string>
    <string name="rate_app_title">Rate the app</string>
    <string name="rate_app_desc">Let me know what you think!</string>
    <string name="contact_title">Contact</string>
    <string name="contact_desc">Have something to say? Email me!</string>

    <string name="ui_title">USER INTERFACE</string>
    <string name="dark_mode_title">Dark Theme</string>
    <string name="dark_mode_desc">Join the dark side</string>

    <string name="note_title_hint">Note Title</string>
    <string name="note_content_hint">Note Content</string>

    <string name="github_profile">Github Profile</string>
    <string name="linkedin_profile">Linkedin Profile</string>
    <string name="twitter_profile">Twitter Profile</string>

    <string name="libraries_title">LIBRARIES USED</string>
    <string name="paper_title">Paper</string>
    <string name="paper_desc">Paper is a fast NoSQL-like storage for Java/Kotlin objects on Android with automatic schema migration support.</string>
    <string name="iconics_title">Android-Iconics</string>
    <string name="iconics_desc">Android library to use any icon font, or vector (.svg) as drawable in your application</string>
    <string name="material_color_title">Android Material Color Picker Dialog</string>
    <string name="material_color_desc">A simple, minimalistic and beautiful dialog color picker for Android 4.1+ (Jellybean+) devices</string>
    <string name="glide_title">Glide</string>
    <string name="glide_desc">An image loading and caching library for Android focused on smooth scrolling</string>
    <string name="expandable_layout_title">Expandable Layout</string>
    <string name="expandable_layout_desc">Android layout which supports expanding and collapsing child views</string>

</resources>
