<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_reminder_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reminder_hint"
            android:lines="2"
            android:maxLines="2"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reminder_text_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/reminder_text_count"
                android:textColor="@color/wrong_color"/>

        </RelativeLayout>

        <CheckBox
            android:id="@+id/reminder_persistent_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persistent"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/reminder_positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/create"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/reminder_negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/reminder_positive_btn"
            android:text="@string/discard"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:layout_toStartOf="@id/reminder_positive_btn" />

    </RelativeLayout>

</LinearLayout>